k8s/infrastructure/network/omada/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omada-route
  namespace: omada
spec:
  parentRefs:
    - name: tls-passthrough
      namespace: gateway
  hostnames:
    - omada.pc-tips.se
  rules:
    - backendRefs:
        - name: omada-svc
          port: 8088
